--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
+	<meta name="description" content="A story of womanhood, happiness and independent thinking."/>
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
