--- a/trailer.html
+++ b/trailer.html
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="container">
-        <p class="flow-text right-align"><strong>Photos by <a href="https://www.toddrichter.photo/">Todd Richter</a></strong></p>
+        <p class="flow-text right-align"><strong>Photos by <a target="_blank" href="https://www.toddrichter.photo/">Todd Richter</a></strong></p>
       </div>
     </main>
       <br>
