--- a/behind.html
+++ b/behind.html
@@ -26,7 +26,7 @@
                   <li><a href="funders.html">Friends & Funders</a></li>
                   <li><a href="talent.html">Talent</a></li>
                   <li class="active"><a href="behind.html">Behind The Lens</a></li>
-                  <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                  <li><a href="screen.html">Screenings</a></li>
                 </ul> 
             </div>
         </nav>
@@ -37,7 +37,7 @@
                     <li><a href="funders.html">Friends & Funders</a></li>
                     <li><a href="talent.html">Talent</a></li>
                     <li class="active"><a href="behind.html">Behind The Lens</a></li>
-                    <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                    <li><a href="screen.html">Screenings</a></li>
                 </ul>
 
     <main>
@@ -57,7 +57,7 @@
       </div>
       <div class="container">
           <div class="col s12">
-            <p class="flow-text">A film with women in charge of almost every aspect of production, <strong>Eudaimonia</strong> embodies the progress of cinema to include and celebrate women behind the camera as well as in front of it. 
+            <p class="flow-text justify">A film with women in charge of almost every aspect of production, <strong>Eudaimonia</strong> embodies the progress of cinema to include and celebrate women behind the camera as well as in front of it. 
             <br><br>
             From its inception <strong>Eudaimonia</strong> set out to encounter womanhood and happiness, with the ultimate conclusion that a balance between rationality and emotion are fundamental to happiness for any human being. Drawing on classical allegory, the world is one of extremes. Extreme control over every aspect of life is fundamental to the Order of this world. Repetition and sameness add to the nightmarish reality of the convent, where one young woman experiences an awakening. 
  
@@ -79,7 +79,7 @@
             <img class="responsive-img" src="img/Juri.jpg">
           </div>
           <div class="col s12 l7">
-            <p class="flow-text">
+            <p class="flow-text justify">
             Estonian native, Juri Krutii moved to Scotland in 2011 to study Film & Visual Culture at University of Aberdeen. After graduating Juri has taken an opportunity to work at University of Aberdeen as a teaching assistant on the filmmaking course. Having made a series of experimental works he continued to pursue his career as an aspiring filmmaker at Edinburgh’s Screen Academy Scotland, where he graduated from in 2018 with a degree of Master of Fine Arts in Film Practice. Driven by film theory and its application into practice, Juri aims to make works that are thought provoking, challenging in its structure and rely on a visual language to establish communication with the viewer. <strong>Eudaimonia</strong> is Juri’s directorial debut.
             <br>
             <a href="mailto:jkrutii.me@gmail.com">jkrutii.me@gmail.com</a>
@@ -102,7 +102,7 @@
         <div class="hide-on-large-only"><img class="responsive-img" src="img/Nell.jpg"></div>
         <div class="row">
           <div class="col s12 l7">
-            <p class="flow-text">
+            <p class="flow-text justify">
             German/American Nell Cunningham studied Film and Visual Culture and Philosophy at the University of Aberdeen and continued her education at the University of Edinburgh completing an MSc in Film Exhibition and Curation. During this time she began to collaborate with Juri Krutii on academic and experimental film projects. She further engaged with her passion for archive film through a Traineeship in Film Archiving. Inspired by current events and strong female historical figures, Nell seeks to engage and provoke the audience, by rejecting mindless consumption of the image. <strong>Eudaimonia</strong> represents her first attempt at creating an original work with this aim. 
             <br>
             <a href="mailto:nellcunningham.me@gmail.com">nellcunningham.me@gmail.com</a>
@@ -131,7 +131,7 @@
             <img class="responsive-img" src="img/claire.png">
           </div>
           <div class="col s12 l7">
-            <p class="flow-text">
+            <p class="flow-text justify">
             Claire is an Irish Cinematographer and artist. Before attending Screen Academy Scotland's MA Film course she did her BA (Hons) degree in Fine Art Painting and has exhibited her work both around Ireland and internationally. She has worked on several independent short film productions and made two of her own shorts on 16mm film. She uses her background in art as a source of inspiration for her aesthetic approach to her lighting style.
             <br>
             <a href="mailto:clairemurphy141@gmail.com">clairemurphy141@gmail.com</a>
@@ -154,7 +154,7 @@
         <div class="hide-on-large-only"><img class="responsive-img" src="img/igua.png"></div>
         <div class="row">
           <div class="col s12 l7">
-            <p class="flow-text">
+            <p class="flow-text justify">
             Iguácel, originally from Zaragoza, Spain, studied for two years in the Art School in her hometown, then a degree in Film, TV and Digital Media and finished her formal education with a Master in Cinematography in Screen Academy Scotland. Since graduating, she has worked as director of photography in student projects and she has kept learning about her craft by working as camera trainee in the industry. In her free time she works on her art skills while studying and researching the more technical aspects of cinematography.
             <br>
             <a href="mailto:iguacelcz@gmail.com">iguacelcz@gmail.com</a>
@@ -183,7 +183,7 @@
             <img class="responsive-img" src="img/Natalie.jpg">
           </div>
           <div class="col s12 l7">
-            <p class="flow-text">
+            <p class="flow-text justify">
             Natalie is a visual artist based in Glasgow.  Prior to completing a Masters in Film Editing at Screen Academy Scotland, she studied her Undergraduate Degree in Fine Art at Edinburgh College of Art, and subsequently obtained a Masters Fine Art Practice from the Glasgow School of Art. Natalie works mainly in video, expanding over the years to many collaborative projects with other artists, musicians and filmmakers. Her increasing interest in narrative told through imagery lead her to pursue a career in film editing. She has built a diverse portfolio of work from video art to music videos, exhibiting in Scotland and Europe.  She has worked in a variety of roles in several film projects including the short film <strong>Take Your Partners</strong>, Directed by Siri Rødnes, which was nominated for several BAFTAs and screened internationally.
             <br>
             <a target="_blank" href="https://www.nataliemcgowan.com/">www.nataliemcgowan.com</a>
@@ -208,7 +208,7 @@
         <div class="hide-on-large-only"><img class="responsive-img" src="img/Dan.jpg"></div>
         <div class="row">
           <div class="col s12 l7">
-            <p class="flow-text">
+            <p class="flow-text justify">
             Daniel is a digital composer, performer and sound designer, based in Berlin. Daniel studied digital composition at Edinburgh College of Art, and has worked on sound for screen projects since 2013. Daniel’s practice focuses on exploring glitch and digital imperfection as a modern aesthetic.
             <br>
             <a target="_blank" href="https://www.danielmcgurty.com/">www.danielmcgurty.com</a>
@@ -234,7 +234,7 @@
             <img class="responsive-img" src="img/siri.jpg">
           </div>
           <div class="col s12 l7">
-            <p class="flow-text">
+            <p class="flow-text justify">
             Siiri is a Glasgow-based Production designer, originally from Finland. She graduated from the Production Arts and Design Programme of the Royal Conservatoire of Scotland, majoring in Set and Costume Design. She has designed several short films, and received the Royal Television Society Student Award for Production Design for one of the Conservatoire’s 2017 Graduation films, <strong>Antonio</strong>. Siiri is currently working in the costume department of the television series, <strong>Outlander</strong>.
             <br>
             <a target="_blank" href="http://siirikorhonen.wixsite.com/skorhonen">siirikorhonen.wixsite.com/skorhonen</a>
@@ -260,7 +260,6 @@
                 <ul>
                   <li><a class="grey-text text-lighten-4" href="https://www.facebook.com/Eudaimonia.shortfilm"">Facebook</a></li>
                   <li><a class="grey-text text-lighten-4" href="https://www.instagram.com/eudaimonia.shortfilm/">Instagram</a></li>
-                  <li><a class="waves-effect waves-light btn orange darken-4 hide-on-large-only" href="screen.html">Screenings</a></li>
                 </ul>
               </div>
             </div>
@@ -276,9 +275,5 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $('.button-collapse').sideNav();
-      });
-    </script>
+      <script type="text/javascript" src="js/script.js"></script>
   </html>
