--- a/funders.html
+++ b/funders.html
@@ -26,7 +26,7 @@
                   <li class="active"><a href="funders.html">Friends & Funders</a></li>
                   <li><a href="talent.html">Talent</a></li>
                   <li><a href="behind.html">Behind The Lens</a></li>
-                  <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                  <li><a href="screen.html">Screenings</a></li>
                 </ul>
             </div>
         </nav>
@@ -38,7 +38,7 @@
                     <li class="active"><a href="funders.html">Friends & Funders</a></li>
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="behind.html">Behind The Lens</a></li>
-                    <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                    <li><a href="screen.html">Screenings</a></li>
                 </ul>
 
       <main>
@@ -54,18 +54,18 @@
       </div>
       <div class="container">
           <h3 class="center-align">Special Thanks to</h3>
-          <p class="flow-text">Leith Theatre Trust, Koka Records, Embo Catering, Prop Hire Scotland, National Theatre of Scotland, Cinelab London, Screen Academy Scotland, Edinburgh Napier University, Edinburgh City Council, Creative Skillset</p>
+          <p class="flow-text justify">Leith Theatre Trust, Koka Records, Embo Catering, Prop Hire Scotland, National Theatre of Scotland, Cinelab London, Screen Academy Scotland, Edinburgh Napier University, Edinburgh City Council, Creative Skillset</p>
 
 				<div class="col s12">
             	<img class="responsive-img" src="img/logo.png">
         </div>
 
-			<p class="flow-text">Ian Van Tillo & Alastair Van Tillo, Ella Duncan, Anna Malone, Ben Thompson, Petros Tsaftaridis, Alex McLaren, Tina Gonzalez, James Mavor, Nigel Smith, David Griggs, Oscar van Heek, Darrel-Kirk Lambert, Lavinia Magnani, Ruth Paxton, Victoria Evans, Susie Brown, Paul Holmes, Kay Sheridan, Carol Devlin, Garry Hall, Alkistis Terzi, Amber Simpson, Nick the Driver, Sam Jones, Robbie Forde, Sam Glover, Athos Tsiopani, Colin Bramwell, Alexander Robinson, Neil Miller, Mihhail Naumov
+			<p class="flow-text justify">Ian Van Tillo & Alastair Van Tillo, Ella Duncan, Anna Malone, Ben Thompson, Petros Tsaftaridis, Alex McLaren, Tina Gonzalez, James Mavor, Nigel Smith, David Griggs, Oscar van Heek, Darrel-Kirk Lambert, Lavinia Magnani, Ruth Paxton, Victoria Evans, Susie Brown, Paul Holmes, Kay Sheridan, Carol Devlin, Garry Hall, Alkistis Terzi, Amber Simpson, Nick the Driver, Sam Jones, Robbie Forde, Sam Glover, Athos Tsiopani, Colin Bramwell, Alexander Robinson, Neil Miller, Mihhail Naumov
 			</p>
       </div>
       <div class="container">
           <h3 class="center-align">& to Our Indiegogo Donors</h3>
-          <p class="flow-text">Ben Brodie, Sara Richter, Darren Seymour, Vadim Salabai, Robin & Stephen Nance, Risto Korhonen, Nancy Luriee Gallagher, Eduard Lobanov, Mihhail Naumov, Marc-Aurèle Palla, 
+          <p class="flow-text justify">Ben Brodie, Sara Richter, Darren Seymour, Vadim Salabai, Robin & Stephen Nance, Risto Korhonen, Nancy Luriee Gallagher, Eduard Lobanov, Mihhail Naumov, Marc-Aurèle Palla, 
     			Alkistis Terzi, Thi Hong Anh Nguyen, Daniil Voronov, Olga Lipatova, Jonny Orr, Peter Anderson, Daria Zubareva, Jo Webster, Lewis MacMichael, William Ginestier, Patrick Dengate, 
     			Euan Connelly, Bianca Madularescu, Martin Podlucki, Charlotte Allison, Tarmo Kõrve, Anastasia Pavlova, Julia Krutii, Natalia Boinitseva, Praskovia Babich, Tatjana Kiseljova, 
     			Inga Krutii, Paula Calabuig, Stacey Clarke, Mark Julegin, Vladimir Gudelj, Tyler Farrow, Kate O'Leary, Craig & Dagmar Cunningham, Lindsey Fox, Jennifer Jay & Evan Johnstone, 
@@ -87,7 +87,6 @@
                 <ul>
                   <li><a class="grey-text text-lighten-4" href="https://www.facebook.com/Eudaimonia.shortfilm"">Facebook</a></li>
                   <li><a class="grey-text text-lighten-4" href="https://www.instagram.com/eudaimonia.shortfilm/">Instagram</a></li>
-                  <li><a class="waves-effect waves-light btn orange darken-4 hide-on-large-only" href="screen.html">Screenings</a></li>
                 </ul>
               </div>
             </div>
@@ -103,9 +102,5 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $('.button-collapse').sideNav();
-      });
-    </script>
+      <script type="text/javascript" src="js/script.js"></script>
   </html>
