--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <li><a href="funders.html">Friends & Funders</a></li>
                   <li><a href="talent.html">Talent</a></li>
                   <li><a href="behind.html">Behind The Lens</a></li>
-                  <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                  <li><a href="screen.html">Screenings</a></li>
                 </ul>
             </div>
         </nav>
@@ -38,7 +38,7 @@
                     <li><a href="funders.html">Friends & Funders</a></li>
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="behind.html">Behind The Lens</a></li>
-                    <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                    <li><a href="screen.html">Screenings</a></li>
                 </ul>
       <main>
       <br>
@@ -71,7 +71,7 @@
             <h3>Synopsis</h3>
           </div>
           <div class="col s12">
-            <p class="flow-text">
+            <p class="flow-text justify">
             In a world without happiness Sister Grace battles The Order in a fight for self realisation that begins and ends with hope. Become fully immersed in a dark future where freedom of any kind has been abandoned and witness an epiphany that completely reshapes the world. Silence of the voice and mind are battled through instinct and courage as Sister Grace discovers the truth about her world. Embracing her own mental powers and emotional needs is an act of complete rebellion that allows Grace to come one step closer to eudaimonia.
             </p>
           </div>
@@ -90,7 +90,7 @@
             <h3>Director’s statement</h3>
           </div>
           <div class="col s12">
-            <p class="flow-text">
+            <p class="flow-text justify">
             <strong>Eudaimonia</strong> is focused on the viewer and one’s participation as an active audience. Immersing one into the world of the convent inspired by the systematic oppression of women, with its medieval misconceptions of a female body and oppressed social status that can still be found in 21st century. It is in viewer’s power to decide to unravel the mystery of the convent and master the image, alongside Grace who is experiencing her awakening to find hope. Questioning the imposed dogma, thinking critically about the surrounding ideology and exercising one’s moral and rational decision making is something that <strong>Eudaimonia</strong> asks from the audience. As the word itself originates from ancient Greek philosophy, more precisely the idea of happiness, where one is only happy when active, in the process of achieving it. The elusive feeling of the satisfaction only comes to those who are seeking and striving towards something that challenges the status quo. <strong>Eudaimonia</strong> rewards the viewer with a satisfaction that is similar to Grace and Hope’s unique bond, representing love, compassion and independent thinking that drives the change that reshapes one's perception.<br>
 			-Juri Krutii
             </p>
@@ -110,9 +110,8 @@
               <div class="col offset-l4 l4 s12 center">
               	<h5>Social</h5>
                 <ul>
-                  <li><a class="grey-text text-lighten-4" href="https://www.facebook.com/Eudaimonia.shortfilm"">Facebook</a></li>
+                  <li><a class="grey-text text-lighten-4" href="https://www.facebook.com/Eudaimonia.shortfilm">Facebook</a></li>
                   <li><a class="grey-text text-lighten-4" href="https://www.instagram.com/eudaimonia.shortfilm/">Instagram</a></li>
-                  <li><a class="waves-effect waves-light btn orange darken-4 hide-on-large-only" href="screen.html">Screenings</a></li>
                 </ul>
               </div>
             </div>
@@ -128,9 +127,5 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $('.button-collapse').sideNav();
-      });
-    </script>
+      <script type="text/javascript" src="js/script.js"></script>
   </html>
