--- a/screen.html
+++ b/screen.html
@@ -26,17 +26,18 @@
                   <li><a href="funders.html">Friends & Funders</a></li>
                   <li><a href="talent.html">Talent</a></li>
                   <li><a href="behind.html">Behind The Lens</a></li>
+                  <li class="active"><a href="screen.html">Screenings</a></li>
                 </ul>
             </div>
         </nav>
         </div>
                 <ul class="side-nav center" id="mobile-demo">
-                    <li  class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="trailer.html">Media</a></li>
                     <li><a href="funders.html">Friends & Funders</a></li>
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="behind.html">Behind The Lens</a></li>
-                    <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                    <li class="active"><a href="screen.html">Screenings</a></li>
                 </ul>
       <main>
       <br>
@@ -47,7 +48,7 @@
           <div class="col s4"><img class="responsive-img" src="img/laurel/l3.png" alt="Laurel"></div>
           <h4>2018 Glasgow Short Film Festival</h4>
           <h4>Scottish Competition II: The Point is to Change it</h4>
-          <a class="waves-effect waves-light btn orange darken-4" target="_blank" href="https://glasgowfilm.org/glasgow-short-film-festival/shows/eudaimonia">16.03.2018</a>
+          <a class="waves-effect waves-light btn grey" target="_blank" href="https://glasgowfilm.org/glasgow-short-film-festival/shows/eudaimonia">16.03.2018</a>
           <br><br>
         </div>
         <div class="container">
@@ -58,7 +59,7 @@
           <div class="container center-align">
           <div class="col s4"><img class="responsive-img" src="img/laurel/l4.png" alt="Laurel"></div>
           <h4>2018 Inverness Film Festival</h4>
-          <a class="waves-effect waves-light btn orange darken-4" target="_blank" href="http://2018.invernessfilmfestival.com/eudaimonia/">11.11.2018</a>
+          <a class="waves-effect waves-light btn grey" target="_blank" href="http://2018.invernessfilmfestival.com/eudaimonia/">11.11.2018</a>
           <br><br>
         </div>
         <div class="container">
@@ -70,7 +71,7 @@
           <div class="col s4"><img class="responsive-img" src="img/laurel/l2.png" alt="Laurel"></div>
           <h4>2018 Underwire Film Festival</h4>
           <h4>Cinematography Competition</h4>
-          <a class="waves-effect waves-light btn orange darken-4 pulse" target="_blank" href="http://www.underwirefestival.com/events/the-future-belongs-to-us/">16.11.2018</a>
+          <a class="waves-effect waves-light btn grey" target="_blank" href="http://www.underwirefestival.com/events/the-future-belongs-to-us/">16.11.2018</a>
           <br><br>
         </div>
       </main>
@@ -102,9 +103,5 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $('.button-collapse').sideNav();
-      });
-    </script>
+      <script type="text/javascript" src="js/script.js"></script>
   </html>
