--- a/talent.html
+++ b/talent.html
@@ -26,7 +26,7 @@
                   <li><a href="funders.html">Friends & Funders</a></li>
                   <li class="active"><a href="talent.html">Talent</a></li>
                   <li><a href="behind.html">Behind The Lens</a></li>
-                  <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                  <li><a href="screen.html">Screenings</a></li>
                 </ul> 
             </div>
         </nav>
@@ -37,7 +37,7 @@
                     <li><a href="funders.html">Friends & Funders</a></li>
                     <li class="active"><a href="talent.html">Talent</a></li>
                     <li><a href="behind.html">Behind The Lens</a></li>
-                    <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                    <li><a href="screen.html">Screenings</a></li>
                 </ul>
 
     <main>
@@ -68,7 +68,7 @@
             <img class="responsive-img" src="img/ilona.png">
           </div>
           <div class="col s12 l7">
-            <p class="flow-text">
+            <p class="flow-text justify">
             Born in Tallinn, Estonia Ilona Andre comes from a Polish and Russian background and has been performing since the age of 7. She moved to Scotland in 2013 to study acting in Aberdeen and pursue her career in performance arts. Later moving to Edinburgh and continuing her studies at Edinburgh Napier University/Queen Margaret University, where she recently graduated from with a degree in Acting for Stage & Screen.
             <br>
             Soon after graduating, Ilona has made her Edinburgh Fringe Festival debut as a part of the Kite in the Storm Productions in an adaptation of Tom Wells’s play, <strong>Jumpers for Goalposts</strong> as Viv. The play had a very positive four star reception.
@@ -97,7 +97,7 @@
         <div class="hide-on-large-only"><img class="responsive-img" src="img/danin.png"></div>
         <div class="row">
           <div class="col s12 l7">
-            <p class="flow-text">
+            <p class="flow-text justify">
             Dani Nelson was born in San Clemente, California. She holds a bachelor's degree from St. John's College, where she studied Philosophy. She recently graduated from the Royal Conservatoire of Scotland with a Master's Degree in Acting. While there, she worked with director Nick Hutchison at The Globe Theater, London.
             <br>
             Dani's first film <strong>Eudaimonia</strong>, directed by Juri Krutii, was recently accepted into the Glasgow Short Film Festival.
@@ -133,7 +133,7 @@
             <img class="responsive-img" src="img/freda.png">
           </div>
           <div class="col s12 l7">
-            <p class="flow-text">
+            <p class="flow-text justify">
             Freda has appeared in many stage productions over the years, most recently as Letitia Blacklock in <strong>A Murder is Announced</strong> by Agatha Christie and as Susan in Liz Lochhead’s bittersweet comedy <strong>Good Things</strong>. In 2018, she achieved a long held ambition to participate in the Edinburgh Fringe Festival, appearing in Thom McKeown’s <strong>Compelled</strong>. Over the past couple of years, Freda has appeared in several short films and has enjoyed the experience of working in front of the camera on <strong>Eudaimonia</strong>.
             <br>
             Freda is based in Fife, Scotland.
@@ -173,7 +173,6 @@
                 <ul>
                   <li><a class="grey-text text-lighten-4" href="https://www.facebook.com/Eudaimonia.shortfilm"">Facebook</a></li>
                   <li><a class="grey-text text-lighten-4" href="https://www.instagram.com/eudaimonia.shortfilm/">Instagram</a></li>
-                  <li><a class="waves-effect waves-light btn orange darken-4 hide-on-large-only" href="screen.html">Screenings</a></li>
                 </ul>
               </div>
             </div>
@@ -189,9 +188,5 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $('.button-collapse').sideNav();
-      });
-    </script>
+      <script type="text/javascript" src="js/script.js"></script>
   </html>
