--- a/trailer.html
+++ b/trailer.html
@@ -26,7 +26,7 @@
                   <li><a href="funders.html">Friends & Funders</a></li>
                   <li><a href="talent.html">Talent</a></li>
                   <li><a href="behind.html">Behind The Lens</a></li>
-                  <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                  <li><a href="screen.html">Screenings</a></li>
                 </ul>
             </div>
         </nav>
@@ -37,7 +37,7 @@
                     <li><a href="funders.html">Friends & Funders</a></li>
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="behind.html">Behind The Lens</a></li>
-                    <li><a class="waves-effect waves-light btn-large orange darken-4" href="screen.html">Screenings</a></li>
+                    <li><a href="screen.html">Screenings</a></li>
                 </ul>
 
     <main>
@@ -117,7 +117,6 @@
                 <ul>
                   <li><a class="grey-text text-lighten-4" href="https://www.facebook.com/Eudaimonia.shortfilm"">Facebook</a></li>
                   <li><a class="grey-text text-lighten-4" href="https://www.instagram.com/eudaimonia.shortfilm/">Instagram</a></li>
-                  <li><a class="waves-effect waves-light btn orange darken-4 hide-on-large-only" href="screen.html">Screenings</a></li>
                 </ul>
               </div>
             </div>
@@ -133,9 +132,5 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script>
-      $(document).ready(function(){
-        $('.button-collapse').sideNav();
-      });
-    </script>
+      <script type="text/javascript" src="js/script.js"></script>
   </html>
