trailer.html -> media.html

--- a/screen.html
+++ b/screen.html
@@ -22,7 +22,7 @@
             <a href="index.html" class="brand-logo">&nbsp<img class="responsive-img hide-on-small-only" src="img/logot.png">&nbspEUDAIMONIA</a>
               <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                  <li><a href="trailer.html">Media</a></li>
+                  <li><a href="media.html">Media</a></li>
                   <li><a href="funders.html">Friends & Funders</a></li>
                   <li><a href="talent.html">Talent</a></li>
                   <li><a href="behind.html">Behind The Lens</a></li>
@@ -33,7 +33,7 @@
         </div>
                 <ul class="side-nav center" id="mobile-demo">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="trailer.html">Media</a></li>
+                    <li><a href="media.html">Media</a></li>
                     <li><a href="funders.html">Friends & Funders</a></li>
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="behind.html">Behind The Lens</a></li>
