--- a/funders.html
+++ b/funders.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+media<!DOCTYPE html>
   <html lang="en">
     <head>
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -22,7 +22,7 @@
             <a href="index.html" class="brand-logo">&nbsp<img class="responsive-img hide-on-small-only" src="img/logot.png">&nbspEUDAIMONIA</a>
               <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                  <li><a href="trailer.html">Media</a></li>
+                  <li><a href="media.html">Media</a></li>
                   <li class="active"><a href="funders.html">Friends & Funders</a></li>
                   <li><a href="talent.html">Talent</a></li>
                   <li><a href="behind.html">Behind The Lens</a></li>
@@ -34,7 +34,7 @@
       
                 <ul class="side-nav center" id="mobile-demo">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="trailer.html">Media</a></li>
+                    <li><a href="media.html">Media</a></li>
                     <li class="active"><a href="funders.html">Friends & Funders</a></li>
                     <li><a href="talent.html">Talent</a></li>
                     <li><a href="behind.html">Behind The Lens</a></li>
