--- a/funders.html
+++ b/funders.html
@@ -1,4 +1,4 @@
-media<!DOCTYPE html>
+<!DOCTYPE html>
   <html lang="en">
     <head>
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
