--- a/media.html
+++ b/media.html
@@ -46,7 +46,7 @@
         <div class="divider"></div>
       </div>
       <div class="container">
-        <p class="flow-text center-align"><strong>Watch the Film here</strong></p>
+        <p class="flow-text center-align"><strong>Watch the Film Here</strong></p>
       </div>
       <div class="container">
         <div class="section">
