--- a/media.html
+++ b/media.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
+      <meta name="description" content="Watch the Film Here<br>A story of womanhood, happiness and independent thinking."/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -11,7 +14,6 @@
       <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
       <link rel="stylesheet" href="css/materialize-social.css"/>
       <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <title>Media</title>
     </head>
 
