--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
-      <meta property="og:title" content="Eudaimonia" />
-      <meta property="og:type" content="video.movie" />
-      <meta property="og:url" content="http://eudaimoniashortfilm.com/"/>
-      <meta property="og:image" content="img/1.png" />
-      <meta name="description" content="A story of womanhood, happiness and independent thinking."/>
+      <meta name="og:title" content="Eudaimonia" />
+      <meta name="og:type" content="video.movie" />
+      <meta name="og:url" content="http://eudaimoniashortfilm.com/"/>
+      <meta name="og:image" content="img/1.png" />
+      <meta name="og:description" content="A story of womanhood, happiness and independent thinking."/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
