meta on all pages

--- a/media.html
+++ b/media.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
+      <meta name="og:title" content="Eudaimonia" />
+      <meta name="og:type" content="video.movie" />
+      <meta name="og:url" content="http://eudaimoniashortfilm.com/media.html"/>
+      <meta name="og:image" content="img/1.png" />
       <meta name="description" content="Watch the Film Here<br>A story of womanhood, happiness and independent thinking."/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -13,7 +17,7 @@
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
       <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
       <link rel="stylesheet" href="css/materialize-social.css"/>
-      <!--Let browser know website is optimized for mobile-->
+
       <title>Media</title>
     </head>
 
