--- a/screen.html
+++ b/screen.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
+      <meta name="og:title" content="Eudaimonia" />
+      <meta name="og:type" content="video.movie" />
+      <meta name="og:url" content="http://eudaimoniashortfilm.com/screen.html"/>
+      <meta name="og:image" content="img/1.png" />
+      <meta name="og:description" content="A story of womanhood, happiness and independent thinking."/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -10,8 +17,7 @@
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
       <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
       <link rel="stylesheet" href="css/materialize-social.css"/>
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
       <title>Screenings</title>
     </head>
 
