--- a/media.html
+++ b/media.html
@@ -5,7 +5,7 @@
       <meta name="og:type" content="video.movie" />
       <meta name="og:url" content="http://eudaimoniashortfilm.com/media.html"/>
       <meta name="og:image" content="img/1.png" />
-      <meta name="description" content="Watch the Film Here<br>A story of womanhood, happiness and independent thinking."/>
+      <meta name="description" content="Watch the Film Here. A story of womanhood, happiness and independent thinking."/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
       <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
